add reset button

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <input id="sentence" class="form-control" type="text">
         </div>
         <button type="submit" class="btn">Submit</button>
+        <button id="reset" type="reset" class="btn">Reset</button>
       </form>
       <div id="output">
       </div>
